--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "crypto": "0.0.3",
     "dat-archiver": "github:joehand/dat-archiver#add/get-archive",
     "dat-js": "^3.3.1",
-    "hyperdrive-http": "github:joehand/hyperdrive-http#add/single-archive-get",
+    "hyperdrive-http": "^3.4.1",
     "level-party": "^3.0.4",
     "mkdirp": "^0.5.1"
   },
