--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
   "author": "Joe Hand <joe@hand.email> (https://joeahand.com/)",
   "license": "MIT",
   "dependencies": {
+    "archiver-server": "^1.0.2",
     "crypto": "0.0.3",
-    "dat-archiver": "github:joehand/dat-archiver#add/get-archive",
-    "dat-js": "^3.3.1",
-    "hyperdrive-http": "^3.4.1",
-    "level-party": "^3.0.4",
-    "mkdirp": "^0.5.1"
+    "dat-archiver": "^1.0.0"
   },
   "devDependencies": {},
   "repository": {
